--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-01",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://OleksandrBalashov.github.io/my-app",
+  "homepage": "https://OleksandrBalashov.github.io/goit-react-hw-03-phonebook",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
