--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.4",
+    "@types/uuid": "^8.3.0",
     "gh-pages": "^3.1.0",
     "modern-normalize": "^1.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.2.1",
+    "typescript": "^4.2.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
